widget align issue

--- a/src/Components/MentorCard/MentorCard.module.css
+++ b/src/Components/MentorCard/MentorCard.module.css
@@ -1,10 +1,10 @@
 .mentor_card_container {
 	margin-top: 1rem;
-	max-width: 400px;
 	box-shadow: 1px 1px 45px -5px rgba(0, 0, 0, 0.08);
 	-webkit-box-shadow: 1px 1px 45px -5px rgba(0, 0, 0, 0.08);
 	-moz-box-shadow: 1px 1px 45px -5px rgba(0, 0, 0, 0.08);
 	padding: 30px 25px;
+	height: 100%;
 	border-radius: 10px;
 }
 
@@ -66,5 +66,6 @@
 	.mentor_card_container {
 		margin-top: 1.5rem;
 		margin-bottom: 1.5rem;
+		padding-bottom: 0;
 	}
 }
