--- a/src/Pages/Company/Company.module.css
+++ b/src/Pages/Company/Company.module.css
@@ -202,7 +202,7 @@
 }
 
 .tcard_img {
-  width: 19rem;
+  width: 100%;
   height: 19rem;
   object-fit: cover;
   border-radius: 5px;
@@ -240,27 +240,26 @@
 @media only screen and (min-width: 768px) {
   .tv_cards_container {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 48% 48%;
     row-gap: 1.5rem;
     columns: 1.5rem;
+    justify-content: space-between;
   }
 }
 
 @media only screen and (min-width: 1000px) {
   .tcard_img {
-    width: 19rem;
+    width: 100%;
     border-radius: 5px;
     margin: 1rem 0rem;
   }
 
-  .tv_cards {
-    width: 20rem;
-  }
 
   .tv_cards_container {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 30% 30% 30%;
     row-gap: 1.5rem;
     columns: 1.5rem;
+    justify-content: space-between;
   }
 }
