--- a/src/Pages/Events/MuAnnouncements/MuAnnouncements.module.css
+++ b/src/Pages/Events/MuAnnouncements/MuAnnouncements.module.css
@@ -109,9 +109,10 @@
 @media only screen and (min-width: 768px) {
   .sv_cards_container {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 48% 48%;
     row-gap: 1.5rem;
     columns: 1.5rem;
+    justify-content: space-between;
   }
 }
 
